# rust-background-removal

./: .gitignore  Cargo.toml  LICENSE  README.md  download_models.cmd  download_models.sh
src/: http.rs  main.rs  onnx.rs
