[package]
name = "rust-background-removal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
image = "0.24.7"
infer = "0.15.0"
ndarray = "0.15.6"
ort = { version = "1.16.2", features = ["cuda"] }
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
